[tool.poetry]
name = "groclient"
# Note: we use poetry-dynamic-versioning to set the version from git tags.
version = "0.0.0"
description = "Python client library for accessing Gro Intelligence's agricultural data platform"
authors = ["Gro Intelligence developers <dev@gro-intelligence.com>"]
readme = "README.md"
homepage = "https://www.gro-intelligence.com/products/gro-api"
repository = "https://github.com/gro-intelligence/api-client"
documentation = "https://developers.gro-intelligence.com/"
license = "MIT"
# TODO: remove once we remove the old api directory completely.
packages = [
  { include = "groclient" },
  { include = "api" },
]

exclude = [
"api/client/samples/analysis_kits", 
"api/client/samples/anomaly_detection", 
"api/client/samples/batch_queries",
"api/client/samples/crop_w_series", 
"api/client/samples/drought", 
"api/client/samples/prevented_plant",
"api/client/samples/analogous_years/get_started_with_analogous_years.ipynb",
"api/client/samples/crop_models/brazil_soybeans.ipynb",
"api/client/samples/crop_models/ethiopia_cereals.ipynb",
"api/client/samples/crop_models/kenya_cereals.ipynb",
"api/client/samples/crop_models/Sao_Paulo_brazil_sugar_content_modeling.ipynb",
"api/client/samples/at-time-query-examples.ipynb",
"api/client/samples/stage_environment_available_date.ipynb"
 ]

[tool.poetry.scripts]
gro_client = 'groclient.__main__:main'

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "*"
requests = "*"
pandas = "*"
tornado = "*"
unicodecsv = "*"
# TODO: Sphinx 3.2.0 added support for local link checking w/ -b linkcheck. Our
# docs currently fail at this though, due to the way we do local linking. See:
# https://www.sphinx-doc.org/en/master/changes.html
sphinx = { version = "~3.1.0", optional = true }
recommonmark = { version = "*", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinx-multiversion = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
mock = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.extras]
docs = ["sphinx", "recommonmark", "sphinx_rtd_theme", "sphinx-multiversion"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+(\\.\\d+)?$)"
# When packaging a version-tagged commit, the version is just the tag name
# (e.g. "1.84.0"). When the commit isn't version-tagged, we include a ".devN"
# suffix denoting how far from the last tagged version the commit is.
#
# Note that the .devN suffixes are ambiguous (with different branches, there
# can be different commits that result in the same .devN suffix). We use this
# scheme because PyPI requires it. We avoid ambiguity by:
# - PyPI: only uploading release packages
# - TestPyPI: only uploading packages when commits are merged to development
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.dev{{ distance }}{% endif %}"
